--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
+<!-- Realizando pruebas en git. Primer commit 
+        Meto el archivo en Staging area
+-->
 <!-- Página principal. Mostramos una pequeña información del centro y podremos acceder a las otras páginas mediante el menú de navegación -->
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
