--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- Realizando pruebas en git. Primer commit 
         Meto el archivo en Staging area
+        Intento hacer pull desde la rama
 -->
 <!-- Página principal. Mostramos una pequeña información del centro y podremos acceder a las otras páginas mediante el menú de navegación -->
 
