Añadoo otro comentario al index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	Modifico desde github el archivo
 Intento hacer pull desde la rama
 
+Ahora desde la rama roberfloser hago cambios en sublime para ver si actualiza en git
+
 -->
 <!-- Página principal. Mostramos una pequeña información del centro y podremos acceder a las otras páginas mediante el menú de navegación -->
 
