--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ Intento hacer pull desde la rama
 
 Ahora desde la rama roberfloser hago cambios en sublime para ver si actualiza en git
 
+DEsde git, añado este comentario
+
 -->
 <!-- Página principal. Mostramos una pequeña información del centro y podremos acceder a las otras páginas mediante el menú de navegación -->
 
