--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ DEsde git, añado este comentario
     
     <section>
     <!-- Texto informativo sobre la empresa -->   
-    <h2>Bienvenidos a ILERNA(MASTER LOCAL)</h2>
+    <h2>Bienvenidos a ILERNA(MASTER LOCAL)lkasdlkdsaf</h2>
         <h4>Tu centro de FP online y presencial</h4>
         <p id="texto_portada">El Centro Integral de Formación Profesional ILERNA imparte<br>ciclos formativos, tanto en modalidad presencial,<br>a través de ILERNA Lleida e ILERNA Madrid,<br>como en modalidad no presencial, a distancia,<br>a través de ILERNA Online.<br><br>Todas las titulaciones que se imparten en ambas modalidades<br>son oficiales, válidas 100% en toda España y se obtienen<br>directamente a través de los exámenes de ILERNA,<br>sin tener que pasar por pruebas libres.<br><br>El sello ILERNA está presente en todas las modalidades.<br>Y es que son más de 50 años de experiencia en el sector educativo<br>y más de 15.000 alumnos formados en nuestras aulas<br>los que nos avalan. Nuestra prioridad es el alumno<br>y la atención, completamente personalizada,<br>que ayudará a que se estudie lo que se estudie,<br>sea a distancia o en uno de nuestros centros presenciales,<br>el alumno no se sentirá nunca solo en el proceso de aprendizaje.</p><br>
         <!-- Imágen del centro Ilerna cargada de Internet -->
