ultima modificacion en ubuntu

--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
-<!-- Realizando pruebas en git. Primer commit 
-        Meto el archivo en Staging area
-	Modifico desde github el archivo
-Intento hacer pull desde la rama
-
-Ahora desde la rama roberfloser hago cambios en sublime para ver si actualiza en git
-
-DEsde git, añado este comentario
+<!-- Realizo cambios con git cerrado
+        otro cambio mas al reiniciar
 
 -->
 <!-- Página principal. Mostramos una pequeña información del centro y podremos acceder a las otras páginas mediante el menú de navegación -->
