--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- Realizo cambios con git cerrado
         otro cambio mas al reiniciar
+        ahora hago cambios desde mac
 
 -->
 <!-- Página principal. Mostramos una pequeña información del centro y podremos acceder a las otras páginas mediante el menú de navegación -->
